updated property path

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">chrometest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,960</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">firefoxtest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,042</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">51,002</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,529</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrometest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testclasses.TC001_Registrationverification</td><td><a href="#m0">testrun</a></td><td rowspan="1">1755189944721</td><td rowspan="1">7006</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">firefoxtest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testclasses.TC001_Registrationverification</td><td><a href="#m1">testrun</a></td><td rowspan="1">1755189960438</td><td rowspan="1">2319</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testclasses.TC002_Loginverification</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1755246293622</td><td rowspan="1">5759</td></tr></tbody>
 </table>
-<h2>chrometest</h2><h3 id="m0">testclasses.TC001_Registrationverification#testrun</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>firefoxtest</h2><h3 id="m1">testclasses.TC001_Registrationverification#testrun</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testclasses.TC002_Loginverification#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
